--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
-    <meta name="apple-itunes-app" content="app-id=6749540359">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Check the latest conditions of hundreds of lakes across the European Alps, with forecasts, measurements, and trends at your fingertips."
-      data-react-helmet="true"
+      content=""
     />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
@@ -21,15 +19,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <meta
-      name="google-site-verification"
-      content="U0Fqk5tVOMQbGTOdX51aCzgpdaqcdkDj7SWwMBpmPWA"
-    />
-    <script
-      defer
-      src="https://surfmonitoring.eawag.ch/script.js"
-      data-website-id="6637c4ce-f62c-4aa9-8d60-0cbec80dfbcd"
-    ></script>
     <style>
       * {
         margin: 0;
@@ -93,7 +82,7 @@
         }
       }
     </style>
-    <title>Alplakes</title>
+    <title>Swiss Water</title>
   </head>
   <body>
     <noscript>
